--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
         <strong>Chúc mừng 20-10</strong> <!--Sửa tiêu đề chúc mừng ở đây-->
         <span id="centerText">
             Ngày Phụ nữ Việt Nam<br> <!-- Sử lời nhắn hiển thị đầu ở đây-->
-            Mong bạn luôn rạng rỡ như những bó hoa!
+            Mong em luôn rạng rỡ như những bó hoa!
         </span>
     </div>
 
@@ -391,24 +391,24 @@
         //Sửa ảnh và lời nhắn ở đây
         const messages = [
             {
-                img: "./assets/a1.jpg", //Thay ảnh
-                text: "Chúc bạn luôn vui vẻ, xinh đẹp và ngập tràn yêu thương!" //Thay lời nhắn
+                img: "./assets/a1.png", //Thay ảnh
+                text: "Chúc em luôn vui vẻ, xinh đẹp và ngập tràn yêu thương!" //Thay lời nhắn
             },
             {
-                img: "./assets/a2.jpg",
-                text: "Mỗi ngày của bạn đều là một đoá hoa nở rộ."
+                img: "./assets/a2.png",
+                text: "Mỗi ngày của em đều là một đoá hoa nở rộ."
             },
             {
-                img: "./assets/a3.jpg",
-                text: "Cảm ơn bạn vì đã luôn mạnh mẽ và tuyệt vời như thế!"
+                img: "./assets/a3.png",
+                text: "Cảm ơn em vì đã luôn mạnh mẽ và tuyệt vời như thế!"
             },
             {
-                img: "./assets/a4.jpg",
-                text: "Chúc bạn một ngày 20/10 thật hạnh phúc và trọn vẹn! "
+                img: "./assets/a4.png",
+                text: "Chúc em một ngày 20/10 thật hạnh phúc và trọn vẹn! "
             },
             {
-                img: "./assets/a5.jpg",
-                text: "Bạn là món quà tuyệt vời nhất mà cuộc sống mang lại! "
+                img: "./assets/a5.png",
+                text: "Em là món quà tuyệt vời nhất mà cuộc sống mang lại! "
             }
         ];
 
@@ -513,5 +513,6 @@
     </script>
 
 </body>
+
 
 </html>
