--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
                 text: "Chúc em một ngày 20/10 thật hạnh phúc và trọn vẹn! "
             },
             {
-                img: "./assets/a5.png",
+                img: "./assets/IMG_5999.jpeg",
                 text: "Em là món quà tuyệt vời nhất mà cuộc sống mang lại! "
             }
         ];
@@ -516,3 +516,4 @@
 
 
 </html>
+
