--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
                 text: "Mỗi ngày của em đều là một đoá hoa nở rộ."
             },
             {
-                img: "./assets/a3.png",
+                img: "./assets/IMG_0183.jpeg",
                 text: "Cảm ơn em vì đã luôn mạnh mẽ và tuyệt vời như thế!"
             },
             {
@@ -516,4 +516,5 @@
 
 
 </html>
+
 
