--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
                 text: "Cảm ơn em vì đã luôn mạnh mẽ và tuyệt vời như thế!"
             },
             {
-                img: "./assets/a4.png",
+                img: "./assets/IMG_0403.jpeg",
                 text: "Chúc em một ngày 20/10 thật hạnh phúc và trọn vẹn! "
             },
             {
@@ -516,5 +516,6 @@
 
 
 </html>
+
 
 
