--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
 
         function createHeartExplosion(x, y) {
             //Thay icon khi ấn thư, hoa, quà
-            const hearts = ['💗'];
+            const hearts = ['🐼'];
             const numHearts = 12;
 
             for (let i = 0; i < numHearts; i++) {
